--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_spacing.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_spacing.scss
@@ -63,3 +63,12 @@ $padding-large: ($global-padding * 1.5);
 @include breakpoint(medium only) {
   .medium-padding-0 {padding: 0;}
 }
+@include breakpoint(large) {
+  .large-padding-0 {padding: 0;}
+  .large-t-padding-0 { padding-top: 0; }
+  .large-r-padding-0 { padding-right: 0; }
+  .large-b-padding-0 { padding-bottom: 0; }
+  .large-l-padding-0 { padding-left: 0; }
+  .large-lr-padding-0 { padding: 0; }
+  .large-tb-padding-0 { padding: 0; }
+}
