--- a/site/src/main/webapp/resources/tornadofaces-tornado/helpers/_images.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/helpers/_images.scss
@@ -1,6 +1,6 @@
 @function image-triangle($color: #000) {
   $color: rgb(red($color), green($color), blue($color));
-  @return 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="32" height="24" viewBox="0 0 32 24"><polygon points="0,0 32,0 16,24" style="fill: #{$color}"></polygon></svg>';
+  @return 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="32" height="24" viewBox="0 0 32 24"><polygon points="0,0 32,0 16,24" style="fill:%23101010"></polygon></svg>';
 }
 
 @mixin image-checkmark($color: #000) {
