Removed default color on modal overlay, added box shadow to modal

--- a/site/src/main/webapp/resources/tornadofaces-tornado/_settings.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/_settings.scss
@@ -406,7 +406,7 @@ $modal-sizes: (
 ) !default;
 
 $modal-overlay-class: 'modal-overlay' !default;
-$modal-overlay-background: rgba(#333, 0.7) !default;
+$modal-overlay-background: none !default;
 
 // 18. Motion UI
 // - - - - - - - - - - - - - - -
