--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_table.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_table.scss
@@ -13,6 +13,10 @@ $table-compact-font-size: 0.95rem;
 
 $table-reflow-compact-padding: 0.1rem 0.9rem;
 
+table caption {
+  font-weight: bold;
+}
+
 table {
   text-align: left;
   margin-bottom: 2rem;
