--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_modal.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_modal.scss
@@ -15,7 +15,7 @@
   width: 100%;
   height: 100vh;
   max-height: 100%;
-  overflow: hidden;
+  overflow: scroll;
   padding: $global-padding;
   box-shadow: 0 0 10px rgba(0,0,0,.4);
 
