Added lots of new icons, + icomoon selection.json

--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_nouislider.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_nouislider.scss
@@ -137,7 +137,7 @@ $sliderHeaderLine: 1px dotted #CBCBCB; //border styling
 //    content: '\e63b \e63a';
     letter-spacing: 3px;
     box-sizing: border-box;
-    font-family: icomoon;
+    font-family: tornadofaces;
     font-size: 10px;
     width: 100%;
     text-align: center;
