--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_accordion.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_accordion.scss
@@ -48,7 +48,7 @@
 
   &:after {
     content: '\e62e';
-    font-family: icomoon;
+    font-family: tornadofaces;
     position: absolute;
     right: 2rem;
     font-size: 1.9rem;
