Added more icons, renamed font to tornadofaces

--- a/site/src/main/webapp/resources/tornadofaces-tornado/components/_icons.scss
+++ b/site/src/main/webapp/resources/tornadofaces-tornado/components/_icons.scss
@@ -27,6 +27,409 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+.icon-fire2:before {
+  content: "\e6c9";
+}
+.icon-fire3:before {
+  content: "\e6ca";
+}
+.icon-fork:before {
+  content: "\e6cb";
+}
+.icon-knife:before {
+  content: "\e6cc";
+}
+.icon-spoon:before {
+  content: "\e6cd";
+}
+.icon-speaker:before {
+  content: "\e6ce";
+}
+.icon-circle-checkmark:before {
+  content: "\e6cf";
+}
+.icon-circle-checkmark2:before {
+  content: "\e6d0";
+}
+.icon-cabinet:before {
+  content: "\e68f";
+}
+.icon-camera:before {
+  content: "\e690";
+}
+.icon-camera2:before {
+  content: "\e691";
+}
+.icon-drink:before {
+  content: "\e692";
+}
+.icon-drink2:before {
+  content: "\e693";
+}
+.icon-coffee:before {
+  content: "\e694";
+}
+.icon-mug:before {
+  content: "\e695";
+}
+.icon-icecream:before {
+  content: "\e696";
+}
+.icon-cake:before {
+  content: "\e697";
+}
+.icon-android:before {
+  content: "\e698";
+}
+.icon-watch:before {
+  content: "\e699";
+}
+.icon-chronometer:before {
+  content: "\e69a";
+}
+.icon-eye:before {
+  content: "\e69b";
+}
+.icon-position:before {
+  content: "\e69c";
+}
+.icon-sitemap:before {
+  content: "\e69d";
+}
+.icon-basket:before {
+  content: "\e69e";
+}
+.icon-open:before {
+  content: "\e69f";
+}
+.icon-sale:before {
+  content: "\e6a0";
+}
+.icon-football:before {
+  content: "\e6a1";
+}
+.icon-eightball:before {
+  content: "\e6a2";
+}
+.icon-bowling:before {
+  content: "\e6a3";
+}
+.icon-bowlingpin:before {
+  content: "\e6a4";
+}
+.icon-dglasses:before {
+  content: "\e6a5";
+}
+.icon-mouse:before {
+  content: "\e6a6";
+}
+.icon-medal:before {
+  content: "\e6a7";
+}
+.icon-medal2:before {
+  content: "\e6a8";
+}
+.icon-magnifier:before {
+  content: "\e6a9";
+}
+.icon-zoomin:before {
+  content: "\e6aa";
+}
+.icon-zoomout:before {
+  content: "\e6ab";
+}
+.icon-davidstar:before {
+  content: "\e6ac";
+}
+.icon-lamp:before {
+  content: "\e6ad";
+}
+.icon-umbrella:before {
+  content: "\e6ae";
+}
+.icon-streetlight:before {
+  content: "\e6af";
+}
+.icon-bomb:before {
+  content: "\e6b0";
+}
+.icon-megaphone:before {
+  content: "\e6b1";
+}
+.icon-bag:before {
+  content: "\e6b2";
+}
+.icon-paint:before {
+  content: "\e6b3";
+}
+.icon-brush:before {
+  content: "\e6b4";
+}
+.icon-comments:before {
+  content: "\e6b5";
+}
+.icon-chat:before {
+  content: "\e6b6";
+}
+.icon-chat2:before {
+  content: "\e6b7";
+}
+.icon-equalizer:before {
+  content: "\e6b8";
+}
+.icon-narrow:before {
+  content: "\e6b9";
+}
+.icon-resize:before {
+  content: "\e6ba";
+}
+.icon-envelope:before {
+  content: "\e6bb";
+}
+.icon-envelope2:before {
+  content: "\e6bc";
+}
+.icon-piano:before {
+  content: "\e6bd";
+}
+.icon-rain:before {
+  content: "\e6be";
+}
+.icon-cloudy:before {
+  content: "\e6bf";
+}
+.icon-cloudy2:before {
+  content: "\e6c0";
+}
+.icon-expand:before {
+  content: "\e6c1";
+}
+.icon-collapse:before {
+  content: "\e6c2";
+}
+.icon-ticket:before {
+  content: "\e6c3";
+}
+.icon-blocked:before {
+  content: "\e6c4";
+}
+.icon-stop:before {
+  content: "\e6c5";
+}
+.icon-anchor:before {
+  content: "\e6c6";
+}
+.icon-clipboard:before {
+  content: "\e6c7";
+}
+.icon-clipboard2:before {
+  content: "\e6c8";
+}
+.icon-database:before {
+  content: "\e686";
+}
+.icon-screen_lock_rotation:before {
+  content: "\e0b0";
+}
+.icon-screen_rotation:before {
+  content: "\e0b1";
+}
+.icon-attach_file:before {
+  content: "\e0c0";
+}
+.icon-headset:before {
+  content: "\e10c";
+}
+.icon-directions_run:before {
+  content: "\e1fe";
+}
+.icon-bluetooth_audio:before {
+  content: "\e215";
+}
+.icon-sd_card:before {
+  content: "\e227";
+}
+.icon-personal_video:before {
+  content: "\e23f";
+}
+.icon-settings_input_composite:before {
+  content: "\e2d4";
+}
+.icon-power-off:before {
+  content: "\f011";
+}
+.icon-eye2:before {
+  content: "\f06e";
+}
+.icon-eye-slash:before {
+  content: "\f070";
+}
+.icon-plane:before {
+  content: "\f072";
+}
+.icon-caret-down:before {
+  content: "\f0d7";
+}
+.icon-caret-up:before {
+  content: "\f0d8";
+}
+.icon-caret-left:before {
+  content: "\f0d9";
+}
+.icon-caret-right:before {
+  content: "\f0da";
+}
+.icon-comment-o:before {
+  content: "\f0e5";
+}
+.icon-bolt:before {
+  content: "\f0e7";
+}
+.icon-desktop:before {
+  content: "\f108";
+}
+.icon-laptop:before {
+  content: "\f109";
+}
+.icon-tablet:before {
+  content: "\f10a";
+}
+.icon-mobile2:before {
+  content: "\f10b";
+}
+.icon-circle-o:before {
+  content: "\f10c";
+}
+.icon-quote-left:before {
+  content: "\f10d";
+}
+.icon-quote-right:before {
+  content: "\f10e";
+}
+.icon-circle:before {
+  content: "\f111";
+}
+.icon-folder-o:before {
+  content: "\f114";
+}
+.icon-folder-open-o:before {
+  content: "\f115";
+}
+.icon-keyboard-o:before {
+  content: "\f11c";
+}
+.icon-flag-o:before {
+  content: "\f11d";
+}
+.icon-fire-extinguisher:before {
+  content: "\f134";
+}
+.icon-rocket:before {
+  content: "\f135";
+}
+.icon-maxcdn:before {
+  content: "\f136";
+}
+.icon-html5:before {
+  content: "\f13b";
+}
+.icon-apple:before {
+  content: "\f179";
+}
+.icon-windows:before {
+  content: "\f17a";
+}
+.icon-android2:before {
+  content: "\f17b";
+}
+.icon-linux:before {
+  content: "\f17c";
+}
+.icon-sun-o:before {
+  content: "\f185";
+}
+.icon-moon-o:before {
+  content: "\f186";
+}
+.icon-bug3:before {
+  content: "\f188";
+}
+.icon-wheelchair:before {
+  content: "\f193";
+}
+.icon-slack:before {
+  content: "\f198";
+}
+.icon-envelope-square:before {
+  content: "\f199";
+}
+.icon-wordpress:before {
+  content: "\f19a";
+}
+.icon-bank:before {
+  content: "\f19c";
+}
+.icon-graduation-cap:before {
+  content: "\f19d";
+}
+.icon-google:before {
+  content: "\f1a0";
+}
+.icon-cube:before {
+  content: "\f1b2";
+}
+.icon-cubes:before {
+  content: "\f1b3";
+}
+.icon-wechat:before {
+  content: "\f1d7";
+}
+.icon-history:before {
+  content: "\f1da";
+}
+.icon-bomb2:before {
+  content: "\f1e2";
+}
+.icon-futbol-o:before {
+  content: "\f1e3";
+}
+.icon-plug:before {
+  content: "\f1e6";
+}
+.icon-newspaper-o:before {
+  content: "\f1ea";
+}
+.icon-cc-visa:before {
+  content: "\f1f0";
+}
+.icon-cc-mastercard:before {
+  content: "\f1f1";
+}
+.icon-cc-discover:before {
+  content: "\f1f2";
+}
+.icon-cc-amex:before {
+  content: "\f1f3";
+}
+.icon-cc-paypal:before {
+  content: "\f1f4";
+}
+.icon-toggle-off2:before {
+  content: "\f204";
+}
+.icon-toggle-on2:before {
+  content: "\f205";
+}
+.icon-facebook-official:before {
+  content: "\f230";
+}
+.icon-hand-paper-o:before {
+  content: "\f256";
+}
+.icon-wikipedia-w:before {
+  content: "\f266";
+}
 .icon-git-square:before {
   content: "\e687";
 }
@@ -35,6 +438,24 @@
 }
 .icon-random:before {
   content: "\e681";
+}
+.icon-circle-left:before {
+  content: "\e689";
+}
+.icon-circle-down:before {
+  content: "\e68a";
+}
+.icon-circle-right:before {
+  content: "\e68b";
+}
+.icon-circle-up:before {
+  content: "\e68c";
+}
+.icon-cancel-circle:before {
+  content: "\e68d";
+}
+.icon-radio-unchecked:before {
+  content: "\e68e";
 }
 .icon-cart4:before {
   content: "\ea01";
@@ -258,7 +679,7 @@
 .icon-cut:before {
   content: "\e645";
 }
-.icon-clipboard:before {
+.icon-clipboard3:before {
   content: "\e646";
 }
 .icon-pencil:before {
@@ -447,7 +868,7 @@
 .icon-comment-fill-info:before {
   content: "\e685";
 }
-.icon-chat:before {
+.icon-chat3:before {
   content: "\110";
 }
 .icon-globe:before {
@@ -462,7 +883,7 @@
 .icon-droplet2:before {
   content: "\e935";
 }
-.icon-camera2:before {
+.icon-camera22:before {
   content: "\e945";
 }
 .icon-music:before {
@@ -854,7 +1275,4 @@
 }
 .icon-paypal2:before {
   content: "\ef33";
-}
-.icon-database:before {
-  content: "\e686";
 }
